--- a/src/assets/css/style-rtl.css
+++ b/src/assets/css/style-rtl.css
@@ -6506,10 +6506,12 @@ textarea.form-control-lg {
   max-height: 100% !important; }
 
 .vh-100 {
-  height: 100vh !important; }
+  height: 100vh !important;
+ background-color: #ffffff !important; }
 
 .min-vh-100 {
-  min-height: 100vh !important; }
+  min-height: 100vh !important;
+background-color: #ffffff !important; }
 
 .flex-fill {
   flex: 1 1 auto !important; }
