--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23212,6 +23212,7 @@ span#counter {
         }
         .upper{
           width: 100%;
+          height: 100vh;
         }
         .down{
           width: 100%;
