--- a/src/assets/css/style-rtl.css
+++ b/src/assets/css/style-rtl.css
@@ -10916,7 +10916,7 @@ svg.pulse-svg {
   .dlabnav .metismenu {
     display: flex;
     flex-direction: var(--dz-side-menu-direction);
-    padding-top: 0.9375rem; }
+     }
     .dlabnav .metismenu.fixed {
       position: fixed;
       top: 0;
@@ -10964,8 +10964,8 @@ svg.pulse-svg {
         .dlabnav .metismenu > li:hover > a g [fill], .dlabnav .metismenu > li:focus > a g [fill] {
           fill: var(--primary); }
       .dlabnav .metismenu > li.mm-active > a {
-        color: var(--primary);
-        background: var(--rgba-primary-1);
+        color: #ffffff;
+        background:red;
         box-shadow: none; }
         .dlabnav .metismenu > li.mm-active > a g [fill] {
           fill: var(--primary); }
