--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23365,5 +23365,9 @@ span#counter {
         border:solid 1px #FFDEDA;
       }
     }
+    .hover-pointer:hover{
+      cursor: pointer;
+    }
+
 
 /*# sourceMappingURL=style.css.map */
