--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23480,12 +23480,14 @@ span#counter {
 }
 .Inputfield-copy{
   height: 2.5rem;
+ width: full;
+}
+.Inputfield-copys{
+  height: 2.5rem;
+  width:140px;
 }
 .datepicker{
-  width: 150px;
-}
-.selector{
-  height: 3.5rem;
+  width:135px;
 }
 
 .file::-webkit-file-upload-button{
